[gd_scene load_steps=3 format=3 uid="uid://d2h3d07h8ar86"]

[ext_resource type="Script" path="res://scripts/environmental_conditions.gd" id="1_deqko"]
[ext_resource type="Script" path="res://scripts/Vehicle_variables.gd" id="2_b6jbw"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_deqko")

[node name="Environmental_variables" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 15.0
offset_right = 309.0
offset_bottom = 299.0
color = Color(0.670588, 0.670588, 0.670588, 0.12549)

[node name="TIME" type="Label" parent="Environmental_variables"]
layout_mode = 0
offset_left = 78.0
offset_top = 16.0
offset_right = 204.0
offset_bottom = 42.0
text = "TIME: 13h:00m
"

[node name="Label_wind_speed" type="Label" parent="Environmental_variables"]
layout_mode = 0
offset_left = 22.0
offset_top = 46.0
offset_right = 119.0
offset_bottom = 72.0
text = "WIND SPEED
"

[node name="slider_wind_speed" type="HSlider" parent="Environmental_variables"]
layout_mode = 0
offset_left = 20.0
offset_top = 72.0
offset_right = 254.0
offset_bottom = 88.0

[node name="Label_wind_direction" type="Label" parent="Environmental_variables"]
layout_mode = 0
offset_left = 22.0
offset_top = 91.0
offset_right = 156.0
offset_bottom = 117.0
text = "WIND DIRECTION
"

[node name="slider_wind_direction" type="HSlider" parent="Environmental_variables"]
layout_mode = 0
offset_left = 20.0
offset_top = 117.0
offset_right = 254.0
offset_bottom = 133.0

[node name="Label_wave_frecuency" type="Label" parent="Environmental_variables"]
layout_mode = 0
offset_left = 21.0
offset_top = 135.0
offset_right = 163.0
offset_bottom = 161.0
text = "WAVE FREQUENCY
"

[node name="slider_wave_frecuency" type="HSlider" parent="Environmental_variables"]
layout_mode = 0
offset_left = 20.0
offset_top = 162.0
offset_right = 254.0
offset_bottom = 178.0

[node name="Label_ocean_color" type="Label" parent="Environmental_variables"]
layout_mode = 0
offset_left = 22.0
offset_top = 181.0
offset_right = 162.0
offset_bottom = 207.0
text = "WAVE AMPLITUDE
"

[node name="slider_ocean_color" type="HSlider" parent="Environmental_variables"]
layout_mode = 0
offset_left = 21.0
offset_top = 208.0
offset_right = 255.0
offset_bottom = 224.0

[node name="Label_ocean_color2" type="Label" parent="Environmental_variables"]
layout_mode = 0
offset_left = 22.0
offset_top = 223.0
offset_right = 136.0
offset_bottom = 249.0
text = "OCEAN COLOR
"

[node name="slider_ocean_color2" type="HSlider" parent="Environmental_variables"]
layout_mode = 0
offset_left = 21.0
offset_top = 250.0
offset_right = 255.0
offset_bottom = 266.0

[node name="Vehicle_variables" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 787.0
offset_top = 482.0
offset_right = 1140.0
offset_bottom = 634.0
color = Color(0.670588, 0.670588, 0.670588, 0)
script = ExtResource("2_b6jbw")

[node name="Latitude" type="Label" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 16.0
offset_top = 6.0
offset_right = 187.0
offset_bottom = 32.0
text = "LAT:
"

[node name="Longitude" type="Label" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 16.0
offset_top = 26.0
offset_right = 187.0
offset_bottom = 52.0
text = "LON:
"

[node name="Time" type="Label" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 16.0
offset_top = 46.0
offset_right = 187.0
offset_bottom = 72.0
text = "HOB:
"

[node name="Yaw" type="Label" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 200.0
offset_top = 6.0
offset_right = 340.0
offset_bottom = 32.0
text = "YAW:
"

[node name="Pitch" type="Label" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 200.0
offset_top = 26.0
offset_right = 340.0
offset_bottom = 52.0
text = "PITCH:"

[node name="Roll" type="Label" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 200.0
offset_top = 46.0
offset_right = 340.0
offset_bottom = 72.0
text = "ROLL:
"

[node name="Depth_panel" type="ColorRect" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 14.0
offset_top = 79.0
offset_right = 82.0
offset_bottom = 147.0
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="Depth" type="Label" parent="Vehicle_variables/Depth_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 62.0
offset_bottom = 29.0
text = "DEPTH"

[node name="Depth_value" type="Label" parent="Vehicle_variables/Depth_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 62.0
offset_bottom = 50.0
text = "------ m"

[node name="Depth_unit" type="Label" parent="Vehicle_variables/Depth_panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 44.0
offset_right = 52.0
offset_bottom = 70.0
text = "[m]"

[node name="Speed_panel" type="ColorRect" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 147.0
offset_top = 79.0
offset_right = 215.0
offset_bottom = 147.0
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="Speed" type="Label" parent="Vehicle_variables/Speed_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 62.0
offset_bottom = 29.0
text = "SPEED"

[node name="Speed_value" type="Label" parent="Vehicle_variables/Speed_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 62.0
offset_bottom = 50.0
text = "------ m"

[node name="Speed_unit" type="Label" parent="Vehicle_variables/Speed_panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 44.0
offset_right = 53.0
offset_bottom = 70.0
text = "[Kn]"

[node name="Heading_panel" type="ColorRect" parent="Vehicle_variables"]
layout_mode = 0
offset_left = 271.0
offset_top = 79.0
offset_right = 339.0
offset_bottom = 147.0
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="Heading" type="Label" parent="Vehicle_variables/Heading_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 62.0
offset_bottom = 29.0
text = "ANGLE"

[node name="Heading_value" type="Label" parent="Vehicle_variables/Heading_panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 62.0
offset_bottom = 50.0
